--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=df2cf2e30aef5153f17dfba89510708a
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
@@ -15,7 +15,7 @@ APP_SECRET=df2cf2e30aef5153f17dfba89510708a
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/phonebook
+DATABASE_URL=mysql://dbo767037702:Apstrlp98@db767037702.hosting-data.io:3306/db767037702
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
