--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "symfony/webpack-encore-bundle": "^1.0",
         "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "4.1.*",
-        "twig/extensions": "^1.5"
+        "twig/extensions": "^1.5",
+		"phpunit/phpunit": "^8.3"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
